@@ -4,7 +4,7 @@
 
 EAPI=5
 
-# ebuild generated by hackport 0.3.9999
+# ebuild generated by hackport 0.4.4.9999
 
 CABAL_FEATURES="lib profile"
 inherit haskell-cabal eutils elisp-common git-r3
@@ -19,7 +19,7 @@ EGIT_REPO_URI="https://github.com/agda/agda.git"
 LICENSE="MIT"
 SLOT="0/${PV}"
 KEYWORDS=""
-IUSE="epic +stdlib"
+IUSE="+cpphs epic +stdlib"
 
 RDEPEND=">=dev-haskell/binary-0.6:=[profile?] <dev-haskell/binary-0.8:=[profile?]
 	>=dev-haskell/boxes-0.1.3:=[profile?] <dev-haskell/boxes-0.2:=[profile?]
@@ -54,8 +54,8 @@ PDEPEND="stdlib? ( sci-mathematics/agda-stdlib )"
 DEPEND="${RDEPEND}
 	dev-haskell/alex
 	>=dev-haskell/cabal-1.8
-	>=dev-haskell/cpphs-1.18.6
 	dev-haskell/happy
+	cpphs? ( dev-haskell/cpphs )
 "
 
 SITEFILE="50${PN}2-gentoo.el"
@@ -77,6 +77,7 @@ src_prepare() {
 
 src_configure() {
 	haskell-cabal_src_configure \
+		$(cabal_flag cpphs cpphs) \
 		$(cabal_flag epic epic)
 }
 
